--- a/pom.xml
+++ b/pom.xml
@@ -75,13 +75,18 @@
       <scope>provided</scope>
     </dependency>
 
-    <!-- https://mvnrepository.com/artifact/net.sf.jasperreports/jasperreports -->
+    <!-- Updated JasperReports dependency -->
     <dependency>
       <groupId>net.sf.jasperreports</groupId>
       <artifactId>jasperreports</artifactId>
       <version>7.0.1</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-crypto</artifactId>
+      <version>6.1.2</version>
+    </dependency>
 
 
   </dependencies>
