--- a/pom.xml
+++ b/pom.xml
@@ -75,11 +75,10 @@
       <scope>provided</scope>
     </dependency>
 
-    <!-- Updated JasperReports dependency -->
     <dependency>
-      <groupId>net.sf.jasperreports</groupId>
-      <artifactId>jasperreports</artifactId>
-      <version>7.0.1</version>
+      <groupId>org.openjfx</groupId>
+      <artifactId>javafx-controls</artifactId>
+      <version>22</version>
     </dependency>
 
     <dependency>
@@ -87,6 +86,35 @@
       <artifactId>spring-security-crypto</artifactId>
       <version>6.1.2</version>
     </dependency>
+
+
+
+    <dependency>
+      <groupId>net.sf.jasperreports</groupId>
+      <artifactId>jasperreports</artifactId>
+      <version>7.0.2</version>
+    </dependency>
+
+    <!-- Required dependencies for JasperReports -->
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-core</artifactId>
+      <version>2.17.2</version>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.17.2</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.12.0</version>
+    </dependency>
+
+
+
+
 
 
   </dependencies>
